kubernetes/ansible-k8s-wordpress/roles/k8s_wordpress/files/manifest/wordpress-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress-ingress
spec:
  tls:
  - hosts:
    - wordpress.icflix.com
    secretName: tls-secret
  rules:
  - host: wordpress.icflix.com
    http:
      paths:
      - backend:
          serviceName: wordpress
          servicePort: 30000
        path: /
